--- a/stregsystem/templates/stregsystem/base.html
+++ b/stregsystem/templates/stregsystem/base.html
@@ -29,28 +29,21 @@
 <img id="rocket" src="{% static "/stregsystem/rocket.png" %}">
 <script src="{% static "/stregsystem/fireworks.js" %}"></script>
 
-<table width="100%">
-    <tr>
-        <td>
-          <center>
-            <input type="button" onclick="location.href='/{{room.id}}';" value="Genstart" tabindex="10" accesskey="q">
-          </center>
-        </td>
-        <td align=center>
-            <h1>{% block heading %}TREOENs STREGSYSTEM
-{% if room.id != 1 %}
- : {{room.description}}
-{% endif %}
-{% endblock %}</h1>
-        </td>
-        <td>
-          <center>
-            <input type="button" onclick="location.href='/{{room.id}}';" value="Menu" tabindex="11" />
-            <input type="button" onclick="location.href='/signup'" value="Tilmeld" tabindex="12"/>
-          </center>
-        </td>
-    </tr>
-</table>
+<div width="100%" style="display: grid; grid-template-columns: 1fr 3fr 1fr;">
+  <div style="margin-left: 16px; justify-self: start; align-self: center;">
+    <input type="button" onclick="location.href='/{{room.id}}';" value="Genstart" tabindex="10" accesskey="q">
+  </div>
+  <div style="align-self: center; justify-self: center">
+    <h1>
+      {% block heading %}TREOENs STREGSYSTEM {% if room.id != 1 %} : {{room.description}} {% endif %} {% endblock %}
+    </h1>
+  </div>
+  <div style="margin-right: 16px; justify-self: end; align-self: center;">
+    <input type="button" onclick="location.href='/{{room.id}}';" value="Menu" tabindex="11" />
+    <input type="button" onclick="location.href='/signup'" value="Tilmeld" tabindex="12"/>
+  </div>
+</div>
+
 <hr>
 
 {% block content %}{% endblock %}
